@@ -1,4 +1,4 @@
-Copyright (c) 2009-2012, TinkerPop [http://tinkerpop.com]
+Copyright (c) 2009-2013, TinkerPop [http://tinkerpop.com]
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
